--- a/scss/_herder.scss
+++ b/scss/_herder.scss
@@ -3,14 +3,14 @@
 
 header {
   width: 100%;
-  height: 72px;
+  height: 120px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-inline: 30px;
-
+  padding-inline:30px;
+  padding-bottom: 40px;
   .logo {
-    width: 180px;
+    width: 150px;
   }
 
   .menu-bg {
