--- a/scss/_top.scss
+++ b/scss/_top.scss
@@ -1,20 +1,51 @@
 @use "./_mixin" as mx;
 @use "./base" as *;
 
+#loading {  //鈴木追加
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: $light-grey;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 24px;
+  z-index: 9999;
+  img{
+    width: 500px;
+  }
+}
+
+.video-bg {  //鈴木追加
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: -100;
+  opacity: 0.4;
+}
+
+header{  //鈴木追加
+  background-color: $white;
+}
+
 .fv {
   width: 100%;
   height: calc(100vh - 100px);
   overflow: hidden;
   position: relative;
+  background-color: $white; //鈴木追加
 
   video {
-    width: 95%;
+    width: 92%;
     height: 100%;
     display: block;
     border-radius: 20px;
     object-fit: cover;
     margin-inline: auto;
     z-index: -1;
+    background-color: $white;
   }
 
   .titles {
@@ -97,6 +128,7 @@
   position: relative;
   overflow: hidden;
   padding-top: 100px;
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 1), rgba(255, 255, 255, 0));   //鈴木追加
 
   .scroll-divider {
     position: absolute;
