--- a/scss/_voice.scss
+++ b/scss/_voice.scss
@@ -245,16 +245,20 @@
       }
 
       img {
-        border-radius: 5px;
+        border-radius: 10px;
         box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.25);
       }
 
       .text {
         font-size: $fw-medium;
+        font-weight: bold;
+        // color: $yellow;
 
         span {
           display: block;
           font-size: $fs-small;
+          font-weight: normal;
+          color: $border-grey;
         }
       }
     }
