--- a/style.css
+++ b/style.css
@@ -45,7 +45,8 @@ a {
 img {
   width: 100%;
   vertical-align: bottom;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .section-title {
@@ -173,7 +174,8 @@ img {
 .chatbot img {
   width: 32px;
   height: 32px;
-  object-fit: contain;
+  -o-object-fit: contain;
+     object-fit: contain;
   display: block;
 }
 .chatbot:hover {
@@ -243,7 +245,8 @@ header {
   height: 100%;
   display: block;
   border-radius: 20px;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   margin-inline: auto;
   z-index: -1;
   background-color: #FFFFFF;
@@ -399,7 +402,8 @@ header {
 }
 .purpose .purpose-list li a img {
   width: 15%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   margin-right: 10px;
 }
 .purpose .purpose-list li a .box-title {
@@ -480,7 +484,8 @@ header {
 }
 .before-after .list li img {
   height: 200px;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   border-radius: 5px;
 }
 .before-after .list li .middle {
@@ -506,7 +511,8 @@ header {
 }
 .before-after .list li .arrow img {
   height: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 .before-after .list li .small {
   text-align: center;
@@ -1651,7 +1657,8 @@ header {
 .company #sns .flex-right ul li .icon img {
   height: 160px;
   width: 160px;
-  object-fit: contain;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 .company #sns .flex-right ul li .text {
   width: 70%;
@@ -1782,7 +1789,8 @@ header {
 }
 .voice .list li img {
   height: 200px;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   border-radius: 5px;
 }
 .voice .list li .text-1,
@@ -1865,7 +1873,8 @@ header {
   position: relative;
 }
 .meetup-section .meetups .meetup .right img {
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.25);
 }
 .meetup-section .meetups .meetup .right .scroll-meter {
@@ -1932,15 +1941,18 @@ header {
   }
 }
 .metaleaf .wrapper .list img {
-  border-radius: 5px;
+  border-radius: 10px;
   box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.25);
 }
 .metaleaf .wrapper .list .text {
   font-size: 500;
+  font-weight: bold;
 }
 .metaleaf .wrapper .list .text span {
   display: block;
   font-size: 1.2rem;
+  font-weight: normal;
+  color: #a6a6a6;
 }
 
 .hackathon {
@@ -1991,7 +2003,8 @@ header {
 .hackathon .wrapper .slider-container .vertical-slider img {
   width: 100%;
   display: block;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   margin-bottom: 20px;
 }
 
@@ -2300,7 +2313,8 @@ footer .contact .flex {
 footer .contact .flex img {
   display: block;
   width: 20%;
-  object-fit: contain;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 footer .contact .flex p {
   color: #FFFFFF;
