--- a/scss/_top.scss
+++ b/scss/_top.scss
@@ -1,7 +1,8 @@
 @use "./_mixin" as mx;
 @use "./base" as *;
 
-#loading {  //鈴木追加
+#loading {
+  //鈴木追加
   position: fixed;
   top: 0;
   left: 0;
@@ -13,12 +14,14 @@
   align-items: center;
   font-size: 24px;
   z-index: 9999;
-  img{
+
+  img {
     width: 500px;
   }
 }
 
-.video-bg {  //鈴木追加
+.video-bg {
+  //鈴木追加
   position: fixed;
   left: 0;
   top: 0;
@@ -26,7 +29,8 @@
   opacity: 0.4;
 }
 
-header{  //鈴木追加
+header {
+  //鈴木追加
   background-color: $white;
 }
 
@@ -128,7 +132,7 @@ header{  //鈴木追加
   position: relative;
   overflow: hidden;
   padding-top: 100px;
-  background: linear-gradient(to bottom, rgba(255, 255, 255, 1), rgba(255, 255, 255, 0));   //鈴木追加
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 1), rgba(255, 255, 255, 0)); //鈴木追加
 
   .scroll-divider {
     position: absolute;
@@ -267,8 +271,8 @@ header{  //鈴木追加
     width: 100%;
     height: 100%;
     overflow: hidden;
-    z-index: -1; 
-  
+    z-index: -1;
+
     video {
       width: 100%;
       height: 100%;
@@ -278,152 +282,152 @@ header{  //鈴木追加
   }
 
 
-.before-after {
-  .wrapper {
-    margin-bottom: 100px;
-  }
-
-  .list {
-    display: flex;
-    justify-content: space-between;
-
-    @include mx.tb {
-      width: 70%;
-      flex-direction: column;
-      margin-inline: auto;
+  .before-after {
+    .wrapper {
+      margin-bottom: 100px;
     }
 
-    @include mx.sp {
-      width: 100%;
-    }
-
-    li {
-      position: relative;
-      flex: 1;
-      background-color: $white;
-      box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.25);
-      border-radius: 5px;
-      padding: 10px 15px;
-      margin-right: 20px;
-
-      @include mx.tb {
-        margin-right: 0;
-        margin-bottom: 20px;
-      }
-
-      &:last-child {
-        margin-right: 0;
-      }
-
-      img {
-        height: 200px;
-        object-fit: cover;
-        border-radius: 5px;
-      }
-
-      .middle {
-        width: 100%;
-
-        .label {
-          display: block;
-          font-size: $fs-small;
-        }
-
-        .text {
-          display: inline-block;
-          border-bottom: 1px solid $yellow;
-        }
-      }
-
-      .right {
-        text-align: right;
-      }
-
-      .arrow {
-        width: 50px;
-        height: 30px;
-        position: absolute;
-        left: 10px;
-        bottom: 60px;
-
-        img {
-          height: 100%;
-          object-fit: cover;
-        }
-      }
-
-      .small {
-        text-align: center;
-      }
-    }
-  }
-}
-
-.reason {
-  padding-bottom: 100px;
-
-  .wrapper {
-    margin-bottom: 0;
-  }
-
-  .section-title {
-    span {
-      position: relative;
-      display: block;
-      font-size: $fs-small;
-      margin-top: 10px;
-      margin-left: 20px;
-
-      &::before {
-        width: 8px;
-        height: 8px;
-        content: "";
-        position: absolute;
-        top: 50%;
-        left: -14px;
-        transform: translateY(-50%);
-        background-color: $yellow;
-        border-radius: 50%;
-      }
-    }
-  }
-
-  .list {
-    margin-top: 50px;
-
-    .item {
+    .list {
       display: flex;
       justify-content: space-between;
-      align-items: center;
-      margin-bottom: 25px;
 
       @include mx.tb {
-        flex-direction: column;
-      }
-
-      .left {
-        width: 30%;
-        margin-right: 15px;
-
-        @include mx.tb {
-          width: 50%;
-        }
-      }
-
-      .right {
         width: 70%;
+        flex-direction: column;
+        margin-inline: auto;
+      }
+
+      @include mx.sp {
+        width: 100%;
+      }
+
+      li {
+        position: relative;
+        flex: 1;
+        background-color: $white;
+        box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.25);
+        border-radius: 5px;
+        padding: 10px 15px;
+        margin-right: 20px;
 
         @include mx.tb {
-          width: 100%;
+          margin-right: 0;
+          margin-bottom: 20px;
         }
 
-        .box-title {
-          color: $yellow;
+        &:last-child {
+          margin-right: 0;
+        }
+
+        img {
+          height: 200px;
+          object-fit: cover;
+          border-radius: 5px;
+        }
+
+        .middle {
+          width: 100%;
+
+          .label {
+            display: block;
+            font-size: $fs-small;
+          }
+
+          .text {
+            display: inline-block;
+            border-bottom: 1px solid $yellow;
+          }
+        }
+
+        .right {
+          text-align: right;
+        }
+
+        .arrow {
+          width: 50px;
+          height: 30px;
+          position: absolute;
+          left: 10px;
+          bottom: 60px;
+
+          img {
+            height: 100%;
+            object-fit: cover;
+          }
+        }
+
+        .small {
+          text-align: center;
         }
       }
     }
   }
-}
+
+  .reason {
+    padding-bottom: 100px;
+
+    .wrapper {
+      margin-bottom: 0;
+    }
+
+    .section-title {
+      span {
+        position: relative;
+        display: block;
+        font-size: $fs-small;
+        margin-top: 10px;
+        margin-left: 20px;
+
+        &::before {
+          width: 8px;
+          height: 8px;
+          content: "";
+          position: absolute;
+          top: 50%;
+          left: -14px;
+          transform: translateY(-50%);
+          background-color: $yellow;
+          border-radius: 50%;
+        }
+      }
+    }
+
+    .list {
+      margin-top: 50px;
+
+      .item {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-bottom: 25px;
+
+        @include mx.tb {
+          flex-direction: column;
+        }
+
+        .left {
+          width: 30%;
+          margin-right: 15px;
+
+          @include mx.tb {
+            width: 50%;
+          }
+        }
+
+        .right {
+          width: 70%;
+
+          @include mx.tb {
+            width: 100%;
+          }
+
+          .box-title {
+            color: $yellow;
+          }
+        }
+      }
+    }
+  }
 }
 
 #flow,
@@ -541,16 +545,44 @@ header{  //鈴木追加
     grid-template-columns: repeat(4, minmax(0, 1fr));
     margin-top: 40px;
     gap: 24px;
-  }
 
-  .section-title,
-  span,
-  .text,
-  .name,
-  .words {
-    color: $white;
+    .items {
+      position: relative;
+
+      .teacher_more_button {
+        position: absolute;
+        right: 0;
+        bottom: -30px;
+        color: $white;
+        display: block;
+        width: 100%;
+
+        &:hover {
+          color: $yellow;
+        }
+
+        span {
+          margin-left: 160px;
+          color: $white;
+        }
+
+      }
+
+      img {
+        line-height: 0;
+      }
+    }
   }
 }
+
+.section-title,
+span,
+.text,
+.name,
+.words {
+  color: $white;
+}
+
 
 #works {
   padding-block: 100px;
@@ -685,6 +717,7 @@ header{  //鈴木追加
         background-color: $yellow;
         border-left: 1px solid $yellow;
         border-right: 1px solid $yellow;
+        color: $white;
       }
 
       th.right {
@@ -792,11 +825,16 @@ header{  //鈴木追加
               margin-right: 5px;
             }
           }
+
         }
 
         .icon {
           max-width: 180px;
         }
+      }
+
+      small {
+        font-size: 1.2rem;
       }
     }
   }
