--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -8,6 +8,10 @@ footer {
     padding-block: 64px 112px;
     position: relative;
 
+    @include mx.sp {
+        padding-block: 64px 40px;
+    }
+
     .wrapper {
         display: flex;
         justify-content: space-between;
@@ -49,12 +53,24 @@ footer {
         width: 100%;
         border-bottom: 1px solid $white;
 
+        @include mx.sp {
+            flex-direction: column;
+        }
+
         .left {
             width: 35%;
             padding-left: 0;
 
+            @include mx.sp {
+                width: 100%;
+            }
+
             img {
                 margin-block: 32px;
+
+                @include mx.sp {
+                    width: 50%;
+                }
             }
 
             a {
@@ -73,19 +89,37 @@ footer {
             margin-left: auto;
             margin-top: 80px;
 
-            li {
-                text-align: right;
+            @include mx.sp {
+                width: 100%;
+                margin-top: 0;
+            }
 
-                a {
-                    color: $white;
-                    font-size: 1.2rem;
-                    margin-bottom: 1.6rem;
+            ul {
 
-                    &:hover {
-                        opacity: 0.6;
+                @include mx.sp {
+                    padding-left: 0;
+                }
+
+                li {
+                    text-align: right;
+
+                    @include mx.sp {
+                        text-align: left;
+                    }
+
+                    a {
+                        color: $white;
+                        font-size: 1.2rem;
+                        margin-bottom: 1.6rem;
+
+                        &:hover {
+                            opacity: 0.6;
+                        }
                     }
                 }
             }
+
+
 
         }
     }
@@ -106,6 +140,10 @@ footer {
         text-decoration: none;
         cursor: pointer;
         transition: opacity 0.3s ease;
+
+        @include mx.sp {
+            right: 0;
+        }
 
         &:hover {
             opacity: 0.7;
@@ -135,7 +173,7 @@ footer {
                     width: 100%;
                     height: 50px; // 白いバーの長さ
                     background-color: $white;
-                    top: 100%; 
+                    top: 100%;
                     animation: moveLine 1.5s linear infinite;
                 }
             }
@@ -154,10 +192,10 @@ footer {
 
 @keyframes moveLine {
     0% {
-        transform: translateY(0); 
+        transform: translateY(0);
     }
 
     100% {
-        transform: translateY(-210%); 
+        transform: translateY(-210%);
     }
 }
