--- a/style.css
+++ b/style.css
@@ -644,9 +644,20 @@ header {
   border-top-left-radius: 50px;
   border-top-right-radius: 50px;
 }
-#flow .section-title,
-#flow span,
-#flow .text-top {
+@media (max-width: 425px) {
+  #flow {
+    padding-block: 60px 0;
+    margin-top: 0;
+  }
+}
+@media (max-width: 900px) {
+  #flow .wrapper {
+    margin-bottom: 40px;
+  }
+}
+#flow .wrapper .section-title,
+#flow .wrapper span,
+#flow .wrapper .text-top {
   color: #FFFFFF;
 }
 #flow ul {
@@ -654,9 +665,23 @@ header {
   border-radius: 8px;
   padding: 32px 24px;
   display: grid;
-  grid-template-columns: repeat(5, minmax(0, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
   margin-top: 40px;
   gap: 24px;
+}
+@media (max-width: 900px) {
+  #flow ul {
+    grid-template-columns: repeat(auto-fit, minmax(300px, 2fr));
+    padding: 32px 40px;
+    margin-inline: 20px;
+  }
+}
+@media (max-width: 425px) {
+  #flow ul {
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    padding: 32px 40px;
+    margin-inline: 0 20px 0 20px;
+  }
 }
 #flow ul li .card {
   background-color: #FFFFFF;
@@ -670,8 +695,8 @@ header {
   margin-bottom: 0;
 }
 #flow ul li .card img {
-  width: 80px;
-  height: 80px;
+  max-width: 80px;
+  max-height: 80px;
 }
 #flow .scroll-divider {
   overflow: hidden;
@@ -684,6 +709,11 @@ header {
   opacity: 0.08;
   white-space: nowrap;
   animation: marquee 12s linear infinite;
+}
+@media (max-width: 425px) {
+  #flow .scroll-divider .scroll-text {
+    font-size: 100px;
+  }
 }
 
 @keyframes marquee {
@@ -702,9 +732,19 @@ header {
 }
 #teacher .teacher-grid {
   display: grid;
-  grid-template-columns: repeat(4, minmax(0, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   margin-top: 40px;
   gap: 24px;
+}
+@media (max-width: 900px) {
+  #teacher .teacher-grid {
+    gap: 50px 25px;
+  }
+}
+@media (max-width: 425px) {
+  #teacher .teacher-grid {
+    gap: 80px;
+  }
 }
 #teacher .teacher-grid .items {
   position: relative;
@@ -712,7 +752,7 @@ header {
 #teacher .teacher-grid .items .teacher_more_button {
   position: absolute;
   right: 0;
-  bottom: -30px;
+  bottom: -40px;
   color: #FFFFFF;
   display: block;
   width: 100%;
@@ -721,23 +761,37 @@ header {
   color: #db8405;
 }
 #teacher .teacher-grid .items .teacher_more_button span {
-  margin-left: 160px;
+  margin-left: 75%;
   color: #FFFFFF;
 }
 #teacher .teacher-grid .items img {
   line-height: 0;
 }
-
-.section-title,
-span,
-.text,
-.name,
-.words {
+#teacher .section-title,
+#teacher span,
+#teacher .text,
+#teacher .name,
+#teacher .words {
   color: #FFFFFF;
 }
 
 #works {
   padding-block: 100px;
+}
+@media (max-width: 900px) {
+  #works {
+    padding-block: 40px;
+  }
+}
+@media (max-width: 425px) {
+  #works .wrapper {
+    margin-bottom: 40px;
+  }
+}
+@media (max-width: 425px) {
+  #works .wrapper .section-title {
+    margin-bottom: 0;
+  }
 }
 #works .flip-slider__inner {
   perspective: 1000px;
@@ -786,6 +840,11 @@ span,
   display: flex;
   flex-direction: row-reverse;
 }
+@media (max-width: 900px) {
+  #works .viewmore {
+    margin-bottom: 0;
+  }
+}
 #works .viewmore a {
   display: block;
   padding: 5px 20px;
@@ -803,6 +862,11 @@ span,
   position: relative;
   padding-bottom: 80px;
 }
+@media (max-width: 425px) {
+  #comparison {
+    padding-bottom: 0;
+  }
+}
 #comparison:before {
   content: "";
   position: absolute;
@@ -812,6 +876,11 @@ span,
   height: 20%;
   background-color: #F6F6F6;
   z-index: -10;
+}
+@media (max-width: 425px) {
+  #comparison .wrapper {
+    margin-bottom: 40px;
+  }
 }
 #comparison .compare-table {
   width: 100%;
@@ -823,6 +892,22 @@ span,
   font-size: 1.8rem;
   border: 1px solid #a6a6a6;
   margin-bottom: 100px;
+  padding-inline: 0;
+}
+@media (max-width: 900px) {
+  #comparison .compare-table {
+    width: 90%;
+  }
+}
+@media (max-width: 425px) {
+  #comparison .compare-table {
+    display: block;
+    width: 100%;
+    overflow-x: auto;
+    -webkit-overflow-scrolling: touch;
+    max-width: 320px;
+    font-size: 1.6rem;
+  }
 }
 #comparison .compare-table th,
 #comparison .compare-table td {
@@ -830,6 +915,13 @@ span,
   border-bottom: 1px solid #a6a6a6;
   text-align: center;
   vertical-align: middle;
+}
+@media (max-width: 425px) {
+  #comparison .compare-table th,
+  #comparison .compare-table td {
+    white-space: nowrap;
+    padding: 16px 10px;
+  }
 }
 #comparison .compare-table thead tr {
   border-bottom: 1px solid #a6a6a6;
@@ -839,12 +931,27 @@ span,
   position: relative;
   height: 80px;
 }
+@media (max-width: 425px) {
+  #comparison .compare-table thead th {
+    height: 50px;
+  }
+}
 #comparison .compare-table thead th:first-child {
   background-color: #FFFFFF;
   width: 18%;
 }
+@media (max-width: 425px) {
+  #comparison .compare-table thead th:first-child {
+    width: 10%;
+  }
+}
 #comparison .compare-table thead th:nth-child(n+2) {
   width: 27.3333333333%;
+}
+@media (max-width: 425px) {
+  #comparison .compare-table thead th:nth-child(n+2) {
+    width: 30%;
+  }
 }
 #comparison .compare-table thead th.pronavi {
   background-color: #db8405;
@@ -866,8 +973,19 @@ span,
   width: 18%;
   font-weight: 400;
 }
+@media (max-width: 425px) {
+  #comparison .compare-table tbody th[scope=row] {
+    width: 10%;
+    font-size: 1.6rem;
+  }
+}
 #comparison .compare-table tbody td {
   width: 27.3333333333%;
+}
+@media (max-width: 425px) {
+  #comparison .compare-table tbody td {
+    width: 30%;
+  }
 }
 #comparison .compare-table tbody td .small {
   display: block;
@@ -894,6 +1012,11 @@ span,
 #comparison .cooling-off .box-inner {
   padding-inline: 15%;
 }
+@media (max-width: 425px) {
+  #comparison .cooling-off .box-inner {
+    padding-inline: 2%;
+  }
+}
 #comparison .cooling-off .box-inner .flex {
   display: flex;
   justify-content: space-between;
@@ -901,9 +1024,20 @@ span,
   gap: 2.4rem;
   margin-bottom: 20px;
 }
+@media (max-width: 425px) {
+  #comparison .cooling-off .box-inner .flex {
+    flex-direction: column;
+    align-items: center;
+  }
+}
 #comparison .cooling-off .box-inner .flex .text-box {
   width: 50%;
   color: #283038;
+}
+@media (max-width: 425px) {
+  #comparison .cooling-off .box-inner .flex .text-box {
+    width: 100%;
+  }
 }
 #comparison .cooling-off .box-inner .flex .text-box .sub {
   margin-bottom: 0;
@@ -918,12 +1052,23 @@ span,
   border-radius: 10px;
   margin-top: 5px;
 }
+@media (max-width: 425px) {
+  #comparison .cooling-off .box-inner .flex .text-box .label {
+    width: 100%;
+  }
+}
 #comparison .cooling-off .box-inner .flex .text-box .info {
   font-size: 3rem;
   font-weight: 700;
   margin-bottom: 0;
   letter-spacing: 0.4rem;
   position: relative;
+  overflow-x: hidden;
+}
+@media (max-width: 425px) {
+  #comparison .cooling-off .box-inner .flex .text-box .info {
+    font-size: 2.3rem;
+  }
 }
 #comparison .cooling-off .box-inner .flex .text-box .info:before {
   position: absolute;
@@ -941,6 +1086,11 @@ span,
 #comparison .cooling-off .box-inner .flex .icon {
   max-width: 180px;
 }
+@media (max-width: 425px) {
+  #comparison .cooling-off .box-inner .flex .icon {
+    width: 100%;
+  }
+}
 #comparison .cooling-off .box-inner small {
   font-size: 1.2rem;
 }
@@ -949,16 +1099,37 @@ span,
   padding-block: 80px;
   background-color: #F6F6F6;
 }
+@media (max-width: 425px) {
+  #faq {
+    padding-block: 40px;
+  }
+}
 #faq .flex {
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
 }
+@media (max-width: 425px) {
+  #faq .flex {
+    flex-direction: column;
+    margin-bottom: 0;
+  }
+}
 #faq .flex .flex-left {
   width: 30%;
 }
+@media (max-width: 425px) {
+  #faq .flex .flex-left {
+    width: 100%;
+  }
+}
 #faq .flex .flex-right {
   width: 70%;
+}
+@media (max-width: 425px) {
+  #faq .flex .flex-right {
+    width: 100%;
+  }
 }
 #faq .flex .flex-right .faq-item {
   border-bottom: 1px solid #a6a6a6;
@@ -2312,6 +2483,11 @@ footer {
   padding-block: 64px 112px;
   position: relative;
 }
+@media (max-width: 425px) {
+  footer {
+    padding-block: 64px 40px;
+  }
+}
 footer .wrapper {
   display: flex;
   justify-content: space-between;
@@ -2346,12 +2522,27 @@ footer .footer-bottom {
   width: 100%;
   border-bottom: 1px solid #FFFFFF;
 }
+@media (max-width: 425px) {
+  footer .footer-bottom {
+    flex-direction: column;
+  }
+}
 footer .footer-bottom .left {
   width: 35%;
   padding-left: 0;
 }
+@media (max-width: 425px) {
+  footer .footer-bottom .left {
+    width: 100%;
+  }
+}
 footer .footer-bottom .left img {
   margin-block: 32px;
+}
+@media (max-width: 425px) {
+  footer .footer-bottom .left img {
+    width: 50%;
+  }
 }
 footer .footer-bottom .left a {
   color: #FFFFFF;
@@ -2366,15 +2557,31 @@ footer .footer-bottom .right {
   margin-left: auto;
   margin-top: 80px;
 }
-footer .footer-bottom .right li {
+@media (max-width: 425px) {
+  footer .footer-bottom .right {
+    width: 100%;
+    margin-top: 0;
+  }
+}
+@media (max-width: 425px) {
+  footer .footer-bottom .right ul {
+    padding-left: 0;
+  }
+}
+footer .footer-bottom .right ul li {
   text-align: right;
 }
-footer .footer-bottom .right li a {
+@media (max-width: 425px) {
+  footer .footer-bottom .right ul li {
+    text-align: left;
+  }
+}
+footer .footer-bottom .right ul li a {
   color: #FFFFFF;
   font-size: 1.2rem;
   margin-bottom: 1.6rem;
 }
-footer .footer-bottom .right li a:hover {
+footer .footer-bottom .right ul li a:hover {
   opacity: 0.6;
 }
 footer .page-top {
@@ -2393,6 +2600,11 @@ footer .page-top {
   text-decoration: none;
   cursor: pointer;
   transition: opacity 0.3s ease;
+}
+@media (max-width: 425px) {
+  footer .page-top {
+    right: 0;
+  }
 }
 footer .page-top:hover {
   opacity: 0.7;
