--- a/scss/_company.scss
+++ b/scss/_company.scss
@@ -17,6 +17,14 @@
         width: 70%
     }
 
+    video {
+        position: fixed;
+        left: 0;
+        top: 0;
+        z-index: -100;
+        opacity: 0.4;
+    }
+
     #fv {
         position: relative;
         padding-block: 50px;
@@ -30,6 +38,10 @@
             left: -10px;
             bottom: -20px;
             z-index: 0;
+
+            @include mx.tb-1100 {
+                font-size: 100px;
+            }
         }
 
         .section-title {
@@ -51,7 +63,7 @@
 
     // ページ全体共通
     .flex-left {
-        .box-title {
+        .section-title {
             margin-bottom: 0;
         }
 
